Fixed issues Footer not fixed to screen About us cards not centred properly and can't don't have enough width to clearly read

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,14 +1,62 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html,
 body {
-    background-color: #FFFFFF;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    color: #000000;
     height: 100%;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+}
+
+body {
+    background-color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    color: #000000;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 30px;
+}
+
+.footer {
+    background-color: #FFCC48;
+    color: black;
+    width: 100%;
+}
+
+.footer-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+}
+
+.footer-icons {
+    font-size: 24px;
+}
+
+.link-footer {
+    text-decoration: none;
+    color: black;
+    display: inline-block;
+    margin-right: 10px;
+    transition: color 0.3s ease;
+}
+
+.link-footer:hover,
+.link-footer:focus,
+.link-footer:active {
+    color: gray;
+    outline: none;
 }
 
 .avatar.placeholder .bg-neutral {
@@ -132,10 +180,6 @@ body {
     opacity: 0.7;
 }
 
-.main-content {
-    flex: 1;
-}
-
 .product-item {
     margin-bottom: 20px;
 }
@@ -188,34 +232,6 @@ body {
 }
 
 .link-secondary:active {
-    color: gray;
-}
-
-.footer {
-    background-color: #FFCC48;
-    color: black;
-}
-
-.footer-icons {
-    font-size: 24px;
-}
-
-.link-footer {
-    text-decoration: none;
-    color: black;
-    display: inline-block;
-    margin-right: 10px;
-    transition: color 0.3s ease;
-}
-
-.link:hover,
-.link:focus,
-.link:active {
-    color: gray;
-    outline: none;
-}
-
-.nav-g-cat {
     color: gray;
 }
 
